# J1_cpp_lab

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Lab.rc  Lab.sln  Lab.vcxproj  Lab.vcxproj.filters  README.md  UI.cpp  class.cpp  class.h  head.h  main.cpp  main.h  play.cpp  resource.h
include/: Class1.h  class.h
src/: CMakeLists.txt  CmakeLists.txt  main.cpp
src/DLL/: CmakeLists.txt
src/class1/: CmakeLists.txt  class1.cpp
src/class2/: CmakeLists.txt  main.cpp
src/class3/: CmakeLists.txt  main.cpp
src/class4/: CMakeLists.txt  main.cpp
